provide kernel_version args for build
Signed-off-by: Zachery Wu <wuzuoyu@huawei.com>
Change-Id: I15da6014176c28e0e25b5e2d6e0c755090a07d9a

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -18,7 +18,10 @@ if (defined(ohos_lite)) {
     import("//build/config/clang/clang.gni")
 }
 
-kernel_version = "linux-4.19"
+declare_args() {
+    kernel_version = "linux-4.19"
+}
+
 if (defined(ohos_lite)) {
     build_ext_component("linux_kernel") {
     exec_path = rebase_path(".", root_build_dir)
