chore: mark_as_prebuilts was moved to //build/lite
Signed-off-by: Caoruihong <crh.cao@huawei.com>
Change-Id: Ic0fc878350516725e976b537ac3605366913d5a5

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -33,7 +33,7 @@ if (defined(ohos_lite)) {
     build_type = "small"
     product_path_rebase = rebase_path(product_path, ohos_root_path)
     command = "./kernel_module_build.sh ${outdir} ${build_type} ${clang_dir} ${product_path_rebase} ${board_name} ${kernel_version}"
-    deps = [ "//prebuilts/lite/sysroot/build:mark_as_prebuilts" ]
+    deps = [ "//build/lite:mark_as_prebuilts" ]
   }
 } else {
     kernel_build_script_dir = "//kernel/linux/build"
