--- a/BUILD.gn
+++ b/BUILD.gn
@@ -17,10 +17,7 @@ if (defined(ohos_lite)) {
     import("//build/ohos.gni")
     import("//build/config/clang/clang.gni")
 }
-
-declare_args() {
-    kernel_version = "linux-4.19"
-}
+import("//build/ohos/kernel/kernel.gni")
 
 if (defined(ohos_lite)) {
     build_ext_component("linux_kernel") {
@@ -32,12 +29,12 @@ if (defined(ohos_lite)) {
     }
     build_type = "small"
     product_path_rebase = rebase_path(product_path, ohos_root_path)
-    command = "./kernel_module_build.sh ${outdir} ${build_type} ${clang_dir} ${product_path_rebase} ${board_name} ${kernel_version}"
+    command = "./kernel_module_build.sh ${outdir} ${build_type} ${clang_dir} ${product_path_rebase} ${board_name} ${linux_kernel_version}"
     deps = [ "//build/lite:mark_as_prebuilts" ]
   }
 } else {
     kernel_build_script_dir = "//kernel/linux/build"
-    kernel_source_dir = "//kernel/linux/$kernel_version"
+    kernel_source_dir = "//kernel/linux/$linux_kernel_version"
 
     action("build_kernel") {
         script = "build_kernel.sh"
@@ -54,7 +51,7 @@ if (defined(ohos_lite)) {
             rebase_path("$clang_base_path"),
             product_path,
             device_name,
-            kernel_version
+            linux_kernel_version
         ]
     }
 
