Added support kernel incremental build
Signed-off-by: yijian <salient.yijian@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -36,10 +36,22 @@ if (defined(ohos_lite)) {
   kernel_build_script_dir = "//kernel/linux/build"
   kernel_source_dir = "//kernel/linux/$linux_kernel_version"
 
+  action("check_build") {
+    script = "check_build.sh"
+    sources = [ kernel_source_dir ]
+    outputs = [ "$root_build_dir/kernel.timestamp" ]
+    args = [
+      rebase_path(kernel_source_dir, root_build_dir),
+      rebase_path("$root_build_dir/packages/phone/images/uImage"),
+      rebase_path("$root_build_dir/kernel.timestamp"),
+    ]
+  }
+
   action("build_kernel") {
     script = "build_kernel.sh"
     sources = [ kernel_source_dir ]
 
+    deps = [ ":check_build" ]
     product_path = "vendor/$product_company/$product_name"
     build_type = "standard"
     outputs = [ "$root_build_dir/packages/phone/images/uImage" ]
