add hc_node and access_to_ken_id dtfuzzer test
Signed-off-by: wenfei <wenfei9@huawei.com>

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -46,6 +46,7 @@ group("linuxkerneltest") {
     deps = [
       ":accesstokenid_test",
       ":init_runtest",
+      "fuzztest:fuzztest",
     ]
   }
 }
