fix code duplication and memory&&sched include file
Signed-off-by: @wu_fan520 <wufan114@huawei.com>

--- a/test/fuzztest/hc_node/hchotdatawaterline_fuzzer/BUILD.gn
+++ b/test/fuzztest/hc_node/hchotdatawaterline_fuzzer/BUILD.gn
@@ -21,13 +21,18 @@ ohos_fuzztest("HcHotDataWaterlineFuzzTest") {
   fuzz_config_file =
       "//kernel/linux/build/test/fuzztest/hc_node/hchotdatawaterline_fuzzer"
 
+  include_dirs = [ "../include" ]
+
   cflags = [
     "-g",
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
   ]
-  sources = [ "hchotdatawaterline_fuzzer.cpp" ]
+  sources = [
+    "../src/hccommon.cpp",
+    "hchotdatawaterline_fuzzer.cpp",
+  ]
 }
 
 group("fuzztest") {
