--- a/test/fuzztest/memory/appscore_fuzzer/BUILD.gn
+++ b/test/fuzztest/memory/appscore_fuzzer/BUILD.gn
@@ -20,13 +20,18 @@ ohos_fuzztest("AppScoreFuzzTest") {
   module_out_path = module_output_path
   fuzz_config_file = "//kernel/linux/build/test/fuzztest/memory/appscore_fuzzer"
 
+  include_dirs = [ "../include" ]
+
   cflags = [
     "-g",
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
   ]
-  sources = [ "appscore_fuzzer.cpp" ]
+  sources = [
+    "../src/memorycommon.cpp",
+    "appscore_fuzzer.cpp",
+  ]
 }
 
 group("fuzztest") {
