--- a/test/fuzztest/memory/forceshrinkanon_fuzzer/BUILD.gn
+++ b/test/fuzztest/memory/forceshrinkanon_fuzzer/BUILD.gn
@@ -21,13 +21,18 @@ ohos_fuzztest("ForceShrinkAnonFuzzTest") {
   fuzz_config_file =
       "//kernel/linux/build/test/fuzztest/memory/forceshrinkanon_fuzzer"
 
+  include_dirs = [ "../include" ]
+
   cflags = [
     "-g",
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
   ]
-  sources = [ "forceshrinkanon_fuzzer.cpp" ]
+  sources = [
+    "../src/memorycommon.cpp",
+    "forceshrinkanon_fuzzer.cpp",
+  ]
 }
 
 group("fuzztest") {
