add tracepoint test.
Signed-off-by: 13359001024 <wenfei9@huawei.com>

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -48,5 +48,8 @@ group("linuxkerneltest") {
       ":init_runtest",
       "fuzztest:fuzztest",
     ]
+    if ("$device_name" == "rk3568") {
+      deps += [ "tracepointtest:tracepointtest" ]
+    }
   }
 }
