add part of ltp syscalls testcases
Signed-off-by: wufan <wufan114@huawei.com>

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -47,6 +47,8 @@ group("linuxkerneltest") {
       ":accesstokenid_test",
       ":init_runtest",
       "fuzztest:fuzztest",
+
+      #"kernel_ltp:HatsKernelTest",
     ]
     if ("$device_name" == "rk3568") {
       deps += [ "tracepointtest:tracepointtest" ]
