add part of ltp syscalls testcases
Signed-off-by: wenfei <wenfei9@huawei.com>

--- a/test/kernel_ltp/syscalls/BUILD.gn
+++ b/test/kernel_ltp/syscalls/BUILD.gn
@@ -122,5 +122,168 @@ group("HatsSyscallsTest") {
     "creat:creat07_child",
     "creat:creat08",
     "creat:creat09",
+    "dup:dup01",
+    "dup:dup02",
+    "dup:dup03",
+    "dup:dup04",
+    "dup:dup05",
+    "dup:dup06",
+    "dup:dup07",
+    "dup2:dup201",
+    "dup2:dup202",
+    "dup2:dup203",
+    "dup2:dup204",
+    "dup2:dup205",
+    "dup2:dup206",
+    "dup2:dup207",
+    "dup3:dup3_01",
+    "dup3:dup3_02",
+    "epoll_create1:epoll_create1_01",
+    "epoll_create1:epoll_create1_02",
+    "epoll_ctl:epoll_ctl01",
+    "epoll_ctl:epoll_ctl02",
+    "epoll_ctl:epoll_ctl03",
+    "epoll_ctl:epoll_ctl04",
+    "epoll_ctl:epoll_ctl05",
+    "epoll_wait:epoll_wait01",
+    "epoll_wait:epoll_wait02",
+    "epoll_wait:epoll_wait03",
+    "epoll_wait:epoll_wait04",
+    "eventfd2:eventfd2_01",
+    "eventfd2:eventfd2_02",
+    "eventfd2:eventfd2_03",
+    "execl:execl01",
+    "execl:execl01_child",
+    "execle:execle01",
+    "execle:execle01_child",
+    "execlp:execlp01",
+    "execlp:execlp01_child",
+    "execv:execv01",
+    "execv:execv01_child",
+    "execve:execve01",
+    "execve:execve01_child",
+    "execve:execve02",
+    "execve:execve03",
+    "execve:execve04",
+    "execve:execve05",
+    "execvp:execvp01",
+    "execvp:execvp01_child",
+    "exit:exit01",
+    "exit:exit02",
+    "exit_group:exit_group01",
+    "faccessat:faccessat01",
+    "fadvis:posix_fadvise01",
+    "fadvis:posix_fadvise02",
+    "fadvis:posix_fadvise03",
+    "fadvis:posix_fadvise04",
+    "fchdir:fchdir01",
+    "fchdir:fchdir02",
+    "fchdir:fchdir03",
+    "fchmodat:fchmodat01",
+    "fchown:fchown01",
+    "fchown:fchown02",
+    "fchown:fchown03",
+    "fchown:fchown04",
+    "fchown:fchown05",
+    "fchownat:fchownat01",
+    "fchownat:fchownat02",
+    "flistxattr:flistxattr01",
+    "flistxattr:flistxattr02",
+    "flistxattr:flistxattr03",
+    "flock:flock01",
+    "flock:flock02",
+    "flock:flock03",
+    "flock:flock04",
+    "flock:flock06",
+    "fpathconf:fpathconf01",
+    "fstat:fstat02",
+    "fstat:fstat03",
+    "futex:futex_cmp_requeue01",
+    "futex:futex_cmp_requeue02",
+    "futex:futex_wait01",
+    "futex:futex_wait02",
+    "futex:futex_wait03",
+    "futex:futex_wait04",
+    "futex:futex_wait05",
+    "futex:futex_wait_bitset01",
+    "futex:futex_wake01",
+    "futex:futex_wake02",
+    "futex:futex_wake03",
+    "futex:futex_wake04",
+    "getcpu:getcpu01",
+    "getcwd:getcwd01",
+    "getcwd:getcwd02",
+    "getcwd:getcwd03",
+    "getcwd:getcwd04",
+    "getdomainname:getdomainname01",
+    "geteuid:geteuid01",
+    "geteuid:geteuid02",
+    "getgid:getgid01",
+    "getgid:getgid03",
+    "getgroups:getgroups01",
+    "getgroups:getgroups03",
+    "gethostname:gethostname01",
+    "getitimer:getitimer01",
+    "getitimer:getitimer02",
+    "getitimer:getitimer03",
+    "getpagesize:getpagesize01",
+    "getpeername:getpeername01",
+    "getpgid:getpgid01",
+    "getpgid:getpgid02",
+    "getpgrp:getpgrp01",
+    "getpid:getpid01",
+    "getpid:getpid02",
+    "getppid:getppid01",
+    "getppid:getppid02",
+    "getpriority:getpriority01",
+    "getpriority:getpriority02",
+    "getrandom:getrandom01",
+    "getrandom:getrandom02",
+    "getrandom:getrandom03",
+    "getrandom:getrandom04",
+    "getresgid:getresgid01",
+    "getresgid:getresgid02",
+    "getresgid:getresgid03",
+    "getresuid:getresuid01",
+    "getresuid:getresuid02",
+    "getresuid:getresuid03",
+    "getrlimit:getrlimit01",
+    "getrlimit:getrlimit02",
+    "getrlimit:getrlimit03",
+    "getsid:getsid01",
+    "getsid:getsid02",
+    "getsockname:getsockname01",
+    "getsockopt:getsockopt01",
+    "getsockopt:getsockopt02",
+    "gettid:gettid01",
+    "gettimeofday:gettimeofday01",
+    "gettimeofday:gettimeofday02",
+    "getuid:getuid01",
+    "getuid:getuid03",
+    "inotify_init:inotify_init1_01",
+    "inotify_init:inotify_init1_02",
+    "kcmp:kcmp01",
+    "kcmp:kcmp02",
+    "kcmp:kcmp03",
+    "keyctl:keyctl01",
+    "keyctl:keyctl02",
+    "keyctl:keyctl03",
+    "keyctl:keyctl04",
+    "keyctl:keyctl05",
+    "keyctl:keyctl06",
+    "keyctl:keyctl07",
+    "keyctl:keyctl08",
+    "lgetxattr:lgetxattr01",
+    "lgetxattr:lgetxattr02",
+    "listen:listen01",
+    "listxattr:listxattr01",
+    "listxattr:listxattr02",
+    "listxattr:listxattr03",
+    "llistxattr:llistxattr01",
+    "llistxattr:llistxattr02",
+    "llistxattr:llistxattr03",
+    "llseek:llseek01",
+    "llseek:llseek02",
+    "llseek:llseek03",
   ]
 }
