x86_64: Added  missing kernel image dependency
Signed-off-by: Wang Xing <raymond.wangxing@huawei.com>
Change-Id: Ic1760afc36284b75cf4a1fd0f8ca16838d6630e9

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -25,6 +25,8 @@ if (target_cpu == "arm") {
   kernel_image = "uImage"
 } else if (target_cpu == "arm64") {
   kernel_image = "Image"
+} else if (target_cpu == "x86_64") {
+  kernel_image = "bzImage"
 }
 
 if (os_level == "mini" || os_level == "small") {
