add unitest for sched_rtg
Signed-off-by: Wang Jingjin <wangjingjin1@huawei.com>

Change-Id: I23aa4c80f3dd61d85f1e2027ac97bcc40df84b15

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -19,11 +19,22 @@ if (is_standard_system) {
 
 if (is_standard_system) {
   module_output_path = "linuxkerneltest/"
-  linuxkerneltest_public_deps = [ "//third_party/googletest:gtest_main" ]
+  linuxkerneltest_public_deps = [
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gtest_main",
+  ]
 
   ohos_unittest("accesstokenid_test") {
     module_out_path = module_output_path
     sources = [ "unittest/accesstokenid/accesstokenid_test.cpp" ]
+    deps = linuxkerneltest_public_deps
+    part_name = "linux"
+    subsystem_name = "kernel"
+  }
+
+  ohos_unittest("rtg_test") {
+    module_out_path = module_output_path
+    sources = [ "unittest/rtg/rtg_test.cpp" ]
     deps = linuxkerneltest_public_deps
     part_name = "linux"
     subsystem_name = "kernel"
@@ -46,6 +57,7 @@ group("linuxkerneltest") {
     deps = [
       ":accesstokenid_test",
       ":init_runtest",
+      ":rtg_test",
       "fuzztest:fuzztest",
 
       #"kernel_ltp:HatsKernelTest",
