Linux kernel configuration layered
Signed-off-by: zhujiaxin <zhujiaxin@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -69,6 +69,8 @@ if (os_level == "mini" || os_level == "small") {
       product_path,
       device_name,
       linux_kernel_version,
+      build_variant,
+      device_type,
     ]
   }
 
